# ralf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROMPT-engine.md  PROMPT-setup.md  PROMPT-tui.md  PROMPT.md  README.md  SECURITY.md  SPEC-f1-thread-state-model.md  SPEC-f2-state-transitions.md  SPEC-f3-git-safety.md  SPEC-f4-thread-persistence.md  SPEC-f5-preflight-checks.md  SPEC.md
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
crates/ralf-cli/: Cargo.toml
crates/ralf-cli/src/: main.rs
crates/ralf-engine/: Cargo.toml
crates/ralf-engine/src/: changelog.rs  chat.rs  config.rs  discovery.rs  git.rs  lib.rs  persistence.rs  preflight.rs  runner.rs  state.rs  thread.rs
crates/ralf-tui/: Cargo.toml
crates/ralf-tui/src/: app.rs  event.rs  headless.rs  lib.rs  models.rs  shell.rs  test_utils.rs  thread_state.rs
crates/ralf-tui/src/commands/: mod.rs  parse.rs
crates/ralf-tui/src/context/: markdown.rs  mod.rs  router.rs  spec_preview.rs
crates/ralf-tui/src/conversation/: mod.rs  placeholder.rs  widget.rs
crates/ralf-tui/src/layout/: mod.rs  screen_modes.rs  shell.rs
crates/ralf-tui/src/screens/: mod.rs  run_dashboard.rs  settings.rs  setup.rs  spec_studio.rs  status.rs  welcome.rs
crates/ralf-tui/src/snapshots/: ralf_tui__snapshot_tests__criteria_all_passed.snap  ralf_tui__snapshot_tests__criteria_all_pending.snap  ralf_tui__snapshot_tests__criteria_mixed_status.snap  ralf_tui__snapshot_tests__criteria_with_failures.snap  ralf_tui__snapshot_tests__run_dashboard_cancelled.snap  ralf_tui__snapshot_tests__run_dashboard_completed.snap  ralf_tui__snapshot_tests__run_dashboard_failed.snap  ralf_tui__snapshot_tests__run_dashboard_idle.snap  ralf_tui__snapshot_tests__run_dashboard_running.snap  ralf_tui__snapshot_tests__run_dashboard_verifying.snap  ralf_tui__snapshot_tests__setup_screen.snap  ralf_tui__snapshot_tests__shell_autocomplete_popup.snap  ralf_tui__snapshot_tests__shell_context_focus.snap  ralf_tui__snapshot_tests__shell_split_context_focused.snap  ralf_tui__snapshot_tests__shell_split_mode.snap  ralf_tui__snapshot_tests__shell_timeline_focus.snap  ralf_tui__snapshot_tests__shell_too_small.snap  ralf_tui__snapshot_tests__welcome_screen.snap
crates/ralf-tui/src/text/: markdown.rs  mod.rs  styles.rs  width.rs  wrap.rs
crates/ralf-tui/src/theme/: borders.rs  colors.rs  icons.rs  mod.rs
crates/ralf-tui/src/timeline/: event.rs  mod.rs  state.rs  widget.rs
crates/ralf-tui/src/ui/: layout.rs  mod.rs  theme.rs
crates/ralf-tui/src/ui/widgets/: log_viewer.rs  mod.rs  status_bar.rs  tabs.rs  text_input.rs
crates/ralf-tui/src/widgets/: footer_hints.rs  input_bar.rs  mod.rs  models_panel.rs  pane.rs  status_bar.rs
docs/: CONFIG.md  DEVELOPMENT_PLAN.md  DEV_ROADMAP.md  MODALS.md  MODELS.md  PROJECT_STRUCTURE.md  REVIEW_PROMPT.md  ROADMAP.md  TROUBLESHOOTING.md  state-machine.md  testing.md
docs/archive/: REVIEWS.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  threads.md
docs/book/src/commands/: keybindings.md  slash-commands.md
docs/book/src/reference/: models.md
docs/book/src/workflows/: drafting.md  reviewing.md  running.md
docs/planning/: REVIEW_PROMPT.md  SPEC-m5a-tui-shell.md  SPEC-m5a1-model-probing.md  SPEC-m5b1-timeline-foundation.md  SPEC-m5b2-phase-router.md  SPEC-m5b3a-focus-layout.md  SPEC-m5b3a-spec-editor.md  SPEC-m5b3a-timeline-input.md  SPEC-m5b3b-chat-integration.md  SPEC-m5b3c-double-prime-compact-timeline.md  SPEC-m5b3c-prime-markdown.md  SPEC-m5b3c-spec-artifact.md  SPEC-slash-commands.md  TUI_DEV_PLAN.md  TUI_STYLE_GUIDE.md  TUI_UX_PRINCIPLES.md  WORKFLOW_UX.md
install/: INSTALL_SPEC.md  install.sh  uninstall.sh
tests/stubs/: stub-model-fail  stub-model-help  stub-model-no-promise  stub-model-ok  stub-model-ratelimit  stub-model-timeout  stub-verifier-fail  stub-verifier-pass
