[package]
name = "ralf-cli"
description = "CLI for ralf multi-model autonomous loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "ralf"
path = "src/main.rs"

[dependencies]
ralf-engine.workspace = true
ralf-tui.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
