[package]
name = "ralf-engine"
description = "Headless engine for ralf multi-model autonomous loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
which.workspace = true
regex.workspace = true
sha2.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
