[package]
name = "ralf-tui"
description = "Terminal UI for ralf multi-model autonomous loop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
ralf-engine.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true

[lints]
workspace = true
